<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather Forecast</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="alerts">Alerts</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_name">day name</string>
    <string name="day_status">day status</string>
    <string name="temp">temp</string>
    <string name="city_name">city Name</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="visibility">Visibility</string>
    <string name="api_key">AIzaSyAbuHdF1hB_ddtCtgEZ7iE3cDqXk4zpVJU</string>
    <string name="search">Search</string>
    <string name="country_name">country name</string>
    <string name="languages">Languages</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="celsius">Celsius</string>
    <string name="notification">Notification</string>
    <string name="disable">Alerts</string>
    <string name="enable">Notification</string>
    <string name="temperature">Temperature</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="loading">Loading..!</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="time">Time: </string>
    <string name="zone">Zone: </string>
    <string name="make_alert">Make Alert</string>
    <string name="save">Save</string>
    <string name="warning">Warning</string>
    <string name="no_alerts">No Alerts</string>
    <string name="at">at</string>
    <string name="remove">remove</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="theme">Theme</string>
    <string name="light">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="alert_spec_header">Data Missing</string>
    <string name="alert_spec_body">Please Enter Full Alert Data</string>
    <string name="ok">Ok</string>
    <string name="confir_loc">Confirm Location</string>
    <string name="ask_sel_map">Do You want to set Alert in</string>
    <string name="yes">Yes</string>
    <string name="do_you">Do You want</string>
    <string name="to_be">to be current Location</string>
    <string name="save_Done">Data has been saved</string>
    <string name="fav">Favorite</string>
    <string name="want_save">Do You want to save</string>
    <string name="to_fav">to your favorite</string>
    <string name="choose">Choose Time</string>
    <string name="full">Please Enter full Data</string>
    <string name="date_warning">End data muct be after start data</string>
    <string name="no_favourites_yet">No Favourites yet</string>
    <string name="no_alert_yet">No alerts yet</string>
</resources>