<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="65dp"
    android:layout_marginHorizontal="20dp"
    android:id="@+id/make_alert_dialog"
    android:backgroundTint="@color/white_theme"


    >
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        style="@style/Theme.AppCompat.Dialog"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/tv_make_alert_name"
            android:fontFamily="@font/lemon"
            android:text="@string/make_alert"
            android:textColor="@color/alert_title"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/tv_make_alert_name"
            app:layout_constraintStart_toStartOf="@id/tv_make_alert_name"
            app:layout_constraintEnd_toEndOf="@id/tv_make_alert_name"
            android:src="@drawable/dialog_img"
            android:id="@+id/img_dialog"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/from"
            android:textColor="@color/dialog_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_dialog" />
        <TextView
            android:id="@+id/to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/to"
            android:textColor="@color/dialog_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/from_text"
            app:layout_constraintTop_toBottomOf="@id/from_text" />
        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/time"
            android:textColor="@color/dialog_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/from_text"
            app:layout_constraintTop_toBottomOf="@id/to_text" />
        <TextView
            android:id="@+id/zone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/zone"
            android:textColor="@color/dialog_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/from_text"
            app:layout_constraintTop_toBottomOf="@id/time_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/from_picker"
            android:padding="10dp"
            android:background="@drawable/appbar_background"
            android:layout_marginEnd="20dp"
            android:textColor="@color/dialog_button"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/from_text"
            app:layout_constraintBottom_toBottomOf="@id/from_text"
            app:layout_constraintStart_toStartOf="@id/zone_picker"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/to_picker"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/appbar_background"
            android:textColor="@color/dialog_button"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/to_text"
            app:layout_constraintBottom_toBottomOf="@id/to_text"
            app:layout_constraintStart_toStartOf="@id/zone_picker"
            app:layout_constraintEnd_toEndOf="@id/from_picker"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/appbar_background"
            android:textColor="@color/dialog_button"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/time_text"
            app:layout_constraintBottom_toBottomOf="@id/time_text"
            app:layout_constraintStart_toStartOf="@id/zone_picker"
            app:layout_constraintEnd_toEndOf="@id/from_picker"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/zone_picker"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/appbar_background"
            android:textColor="@color/dialog_button"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/zone_text"
            app:layout_constraintBottom_toBottomOf="@id/zone_text"
            app:layout_constraintStart_toEndOf="@id/zone_text"
            app:layout_constraintEnd_toEndOf="@id/from_picker"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/save_alert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/zone_picker"
            android:background="@drawable/save_alert"
            android:textColor="@color/white"
            />
        <DatePicker
            android:id="@+id/datePicker_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/Theme.WeatherApp"
            android:visibility="gone"
            />
        <TimePicker
            android:id="@+id/timePicker_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:timePickerMode="clock"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            android:theme="@style/Theme.WeatherApp"
            android:visibility="gone"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

